Addressing PPD type edit bug

Fixed. Now correctly edits PPD type and ensures only one PPD type is
ever selected at one time. Printers currently setup and presenting this
bug will have to be re-edited for this change to take effect
(chromium:814374 is tracking this).

Current behavior: Will always favor autoconf on printer setup, if
possible. Else will take any PPD type provided by user.

Bug: chromium:767924
Change-Id: I7172c9d8d831916d7a49d02d0db38a01458f0006
Reviewed-on: https://chromium-review.googlesource.com/929301
Reviewed-by: Sean Kau <skau@chromium.org>
Commit-Queue: Luum Habtemariam <luum@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538199}